🐛 Fix critical gRPC post-start registration and remove fragile reflection
- Fix BossIpcServer: rebuild server when services added after start(),
  so 15 plugin gRPC bridges are actually registered (was silently lost)
- Replace reflection with direct KernelBootstrap.instance access in
  waitForReady() and buildJvmArgs() (breaks under obfuscation)
- Fix delta state: fall back to full state fetch instead of corrupting
  state by applying raw patch bytes as replacement
- Fix ContextMenuServiceBridge: pass ContextMenuProvider to constructor
- Expose PluginStateBridge.effects as SharedFlow (was MutableSharedFlow)
- Remove --enable-preview JVM flag (requires exact Java version match)
- Add UTF-8 charset to all env_vars file I/O in AdvancedSettings

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>